[tool.poetry]
name = "many-player-elo"
version = "0.1.0"
description = ""
authors = ["doeke <doekebuursam@gmail.com>"]
readme = "README.md"
packages = [{include = "many_player_elo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
